@@ -1,9 +1,6 @@
 TODO
 ----
 
-* ForeignKey('Table', otherColumn='other_id') to allow ForeignKey to
-  point to a non-id column.
-
 * RelatedJoin.hasOther(otherObject[.id])
 
 * tableParamSQL::
